transpiler_86/core_parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    DEC
    DIV_DEC
    MUL_INC
    NULL
    OR

Grammar

Rule 0     S' -> program
Rule 1     package_statement_or_empty -> package_statement
Rule 2     package_statement_or_empty -> empty
Rule 3     statement_without_semicolon -> variable_declaration
Rule 4     statement_without_semicolon -> variable_initialization
Rule 5     statement_without_semicolon -> expression_statement
Rule 6     statement_without_semicolon -> return_statement
Rule 7     statement_without_semicolon -> variable_increment
Rule 8     statement_with_semicolon_or_comment -> statement_without_semicolon ;
Rule 9     statement_with_semicolon_or_comment -> if_statement
Rule 10    statement_with_semicolon_or_comment -> while_statement
Rule 11    statement_with_semicolon_or_comment -> comment_statement
Rule 12    package_statement -> PACKAGE qualified_identifier ;
Rule 13    expression -> expression + expression
Rule 14    expression -> expression - expression
Rule 15    expression -> expression * expression
Rule 16    expression -> expression / expression
Rule 17    expression -> expression % expression
Rule 18    expression -> ( expression )
Rule 19    expression -> factor
Rule 20    comment_list -> comment
Rule 21    comment_list -> comment comment_list
Rule 22    variable_declaration -> variable_type identifier
Rule 23    if_statement -> IF ( comparison_expression ) { statement_list_or_empty } else_statement_or_empty
Rule 24    program -> class_declaration_with_comments
Rule 25    pre_class_declaration_list -> pre_class_declaration
Rule 26    pre_class_declaration_list -> pre_class_declaration_list pre_class_declaration
Rule 27    variable_initialization -> variable_type identifier = expression
Rule 28    comparison_expression -> comparison_expression = = comparison_expression
Rule 29    comparison_expression -> comparison_expression ! = comparison_expression
Rule 30    comparison_expression -> comparison_expression > = comparison_expression
Rule 31    comparison_expression -> comparison_expression < = comparison_expression
Rule 32    comparison_expression -> comparison_expression < comparison_expression
Rule 33    comparison_expression -> comparison_expression > comparison_expression
Rule 34    comparison_expression -> TRUE
Rule 35    comparison_expression -> FALSE
Rule 36    comment -> SINGLE_LINE_COMMENT
Rule 37    comment -> multi_line_comment
Rule 38    class_declaration -> class_modifier_list CLASS identifier extends_or_empty { class_body }
Rule 39    pre_class_declaration -> comment_list
Rule 40    pre_class_declaration -> import_statement
Rule 41    pre_class_declaration -> empty
Rule 42    class_declaration_with_comments -> package_statement_or_empty pre_class_declaration_list class_declaration comment_list_or_empty
Rule 43    expression_statement -> expression
Rule 44    multi_line_comment -> MULTI_LINE_COMMENT
Rule 45    class_modifier_list -> class_modifier
Rule 46    class_modifier_list -> class_modifier_list class_modifier
Rule 47    factor -> DEC_LIT
Rule 48    factor -> FLOAT_LIT
Rule 49    factor -> STR_LIT
Rule 50    factor -> CHAR_LIT
Rule 51    factor -> unary_minus
Rule 52    factor -> qualified_identifier
Rule 53    factor -> method_call
Rule 54    factor -> new_statement
Rule 55    import_statement -> IMPORT qualified_identifier ;
Rule 56    return_statement -> RETURN expression
Rule 57    return_statement -> RETURN empty
Rule 58    variable_type -> identifier
Rule 59    variable_type -> BYTE
Rule 60    variable_type -> SHORT
Rule 61    variable_type -> CHAR
Rule 62    variable_type -> INT
Rule 63    variable_type -> LONG
Rule 64    variable_type -> FLOAT
Rule 65    variable_type -> DOUBLE
Rule 66    variable_type -> BOOLEAN
Rule 67    variable_type -> array_type
Rule 68    variable_increment -> identifier + +
Rule 69    variable_increment -> identifier INC expression
Rule 70    class_modifier -> PUBLIC
Rule 71    class_modifier -> PRIVATE
Rule 72    class_modifier -> VOID
Rule 73    class_modifier -> STATIC
Rule 74    class_modifier -> variable_type
Rule 75    unary_minus -> - DEC_LIT
Rule 76    unary_minus -> - FLOAT_LIT
Rule 77    else_statement_or_empty -> ELSE { statement_list_or_empty }
Rule 78    else_statement_or_empty -> empty
Rule 79    extends_or_empty -> EXTENDS qualified_identifier
Rule 80    extends_or_empty -> empty
Rule 81    identifier -> ID
Rule 82    method_call -> qualified_identifier ( argument_list )
Rule 83    array_type -> variable_type [ ]
Rule 84    while_statement -> WHILE ( comparison_expression ) { statement_list_or_empty }
Rule 85    class_body -> method_list_or_empty
Rule 86    argument_list -> expression
Rule 87    argument_list -> expression , argument_list
Rule 88    argument_list -> empty
Rule 89    qualified_identifier -> identifier
Rule 90    qualified_identifier -> identifier . qualified_identifier
Rule 91    comment_statement -> comment
Rule 92    method_list_or_empty -> method_list
Rule 93    method_list_or_empty -> empty
Rule 94    new_statement -> NEW qualified_identifier ( argument_list )
Rule 95    empty -> <empty>
Rule 96    method_list -> method_or_comment
Rule 97    method_list -> method_list method_or_comment
Rule 98    comment_list_or_empty -> comment_list
Rule 99    comment_list_or_empty -> empty
Rule 100   method_or_comment -> field
Rule 101   method_or_comment -> method
Rule 102   method_or_comment -> comment
Rule 103   field -> class_modifier_list identifier = expression ;
Rule 104   method -> class_modifier_list identifier ( parameter_list_or_empty ) { statement_list_or_empty }
Rule 105   parameter_list_or_empty -> parameter_list
Rule 106   parameter_list_or_empty -> empty
Rule 107   parameter_list -> parameter_with_type
Rule 108   parameter_list -> parameter_with_type , parameter_list
Rule 109   parameter_with_type -> variable_type identifier
Rule 110   statement_list_or_empty -> statement_list
Rule 111   statement_list_or_empty -> empty
Rule 112   statement_list -> statement_with_semicolon_or_comment
Rule 113   statement_list -> statement_list statement_with_semicolon_or_comment

Terminals, with rules where they appear

!                    : 29
%                    : 17
(                    : 18 23 82 84 94 104
)                    : 18 23 82 84 94 104
*                    : 15
+                    : 13 68 68
,                    : 87 108
-                    : 14 75 76
.                    : 90
/                    : 16
;                    : 8 12 55 103
<                    : 31 32
=                    : 27 28 28 29 30 31 103
>                    : 30 33
AND                  : 
BOOLEAN              : 66
BYTE                 : 59
CHAR                 : 61
CHAR_LIT             : 50
CLASS                : 38
DEC                  : 
DEC_LIT              : 47 75
DIV_DEC              : 
DOUBLE               : 65
ELSE                 : 77
EXTENDS              : 79
FALSE                : 35
FLOAT                : 64
FLOAT_LIT            : 48 76
ID                   : 81
IF                   : 23
IMPORT               : 55
INC                  : 69
INT                  : 62
LONG                 : 63
MULTI_LINE_COMMENT   : 44
MUL_INC              : 
NEW                  : 94
NULL                 : 
OR                   : 
PACKAGE              : 12
PRIVATE              : 71
PUBLIC               : 70
RETURN               : 56 57
SHORT                : 60
SINGLE_LINE_COMMENT  : 36
STATIC               : 73
STR_LIT              : 49
TRUE                 : 34
VOID                 : 72
WHILE                : 84
[                    : 83
]                    : 83
error                : 
{                    : 23 38 77 84 104
}                    : 23 38 77 84 104

Nonterminals, with rules where they appear

argument_list        : 82 87 94
array_type           : 67
class_body           : 38
class_declaration    : 42
class_declaration_with_comments : 24
class_modifier       : 45 46
class_modifier_list  : 38 46 103 104
comment              : 20 21 91 102
comment_list         : 21 39 98
comment_list_or_empty : 42
comment_statement    : 11
comparison_expression : 23 28 28 29 29 30 30 31 31 32 32 33 33 84
else_statement_or_empty : 23
empty                : 2 41 57 78 80 88 93 99 106 111
expression           : 13 13 14 14 15 15 16 16 17 17 18 27 43 56 69 86 87 103
expression_statement : 5
extends_or_empty     : 38
factor               : 19
field                : 100
identifier           : 22 27 38 58 68 69 89 90 103 104 109
if_statement         : 9
import_statement     : 40
method               : 101
method_call          : 53
method_list          : 92 97
method_list_or_empty : 85
method_or_comment    : 96 97
multi_line_comment   : 37
new_statement        : 54
package_statement    : 1
package_statement_or_empty : 42
parameter_list       : 105 108
parameter_list_or_empty : 104
parameter_with_type  : 107 108
pre_class_declaration : 25 26
pre_class_declaration_list : 26 42
program              : 0
qualified_identifier : 12 52 55 79 82 90 94
return_statement     : 6
statement_list       : 110 113
statement_list_or_empty : 23 77 84 104
statement_with_semicolon_or_comment : 112 113
statement_without_semicolon : 8
unary_minus          : 51
variable_declaration : 3
variable_increment   : 7
variable_initialization : 4
variable_type        : 22 27 74 83 109
while_statement      : 10

Parsing method: LALR

state 0

    (0) S' -> . program
    (24) program -> . class_declaration_with_comments
    (42) class_declaration_with_comments -> . package_statement_or_empty pre_class_declaration_list class_declaration comment_list_or_empty
    (1) package_statement_or_empty -> . package_statement
    (2) package_statement_or_empty -> . empty
    (12) package_statement -> . PACKAGE qualified_identifier ;
    (95) empty -> .

    PACKAGE         shift and go to state 6
    IMPORT          reduce using rule 95 (empty -> .)
    SINGLE_LINE_COMMENT reduce using rule 95 (empty -> .)
    MULTI_LINE_COMMENT reduce using rule 95 (empty -> .)
    PUBLIC          reduce using rule 95 (empty -> .)
    PRIVATE         reduce using rule 95 (empty -> .)
    VOID            reduce using rule 95 (empty -> .)
    STATIC          reduce using rule 95 (empty -> .)
    BYTE            reduce using rule 95 (empty -> .)
    SHORT           reduce using rule 95 (empty -> .)
    CHAR            reduce using rule 95 (empty -> .)
    INT             reduce using rule 95 (empty -> .)
    LONG            reduce using rule 95 (empty -> .)
    FLOAT           reduce using rule 95 (empty -> .)
    DOUBLE          reduce using rule 95 (empty -> .)
    BOOLEAN         reduce using rule 95 (empty -> .)
    ID              reduce using rule 95 (empty -> .)

    program                        shift and go to state 1
    class_declaration_with_comments shift and go to state 2
    package_statement_or_empty     shift and go to state 3
    package_statement              shift and go to state 4
    empty                          shift and go to state 5

state 1

    (0) S' -> program .



state 2

    (24) program -> class_declaration_with_comments .

    $end            reduce using rule 24 (program -> class_declaration_with_comments .)


state 3

    (42) class_declaration_with_comments -> package_statement_or_empty . pre_class_declaration_list class_declaration comment_list_or_empty
    (25) pre_class_declaration_list -> . pre_class_declaration
    (26) pre_class_declaration_list -> . pre_class_declaration_list pre_class_declaration
    (39) pre_class_declaration -> . comment_list
    (40) pre_class_declaration -> . import_statement
    (41) pre_class_declaration -> . empty
    (20) comment_list -> . comment
    (21) comment_list -> . comment comment_list
    (55) import_statement -> . IMPORT qualified_identifier ;
    (95) empty -> .
    (36) comment -> . SINGLE_LINE_COMMENT
    (37) comment -> . multi_line_comment
    (44) multi_line_comment -> . MULTI_LINE_COMMENT

  ! shift/reduce conflict for IMPORT resolved as shift
  ! shift/reduce conflict for SINGLE_LINE_COMMENT resolved as shift
  ! shift/reduce conflict for MULTI_LINE_COMMENT resolved as shift
    IMPORT          shift and go to state 13
    PUBLIC          reduce using rule 95 (empty -> .)
    PRIVATE         reduce using rule 95 (empty -> .)
    VOID            reduce using rule 95 (empty -> .)
    STATIC          reduce using rule 95 (empty -> .)
    BYTE            reduce using rule 95 (empty -> .)
    SHORT           reduce using rule 95 (empty -> .)
    CHAR            reduce using rule 95 (empty -> .)
    INT             reduce using rule 95 (empty -> .)
    LONG            reduce using rule 95 (empty -> .)
    FLOAT           reduce using rule 95 (empty -> .)
    DOUBLE          reduce using rule 95 (empty -> .)
    BOOLEAN         reduce using rule 95 (empty -> .)
    ID              reduce using rule 95 (empty -> .)
    SINGLE_LINE_COMMENT shift and go to state 14
    MULTI_LINE_COMMENT shift and go to state 16

  ! IMPORT          [ reduce using rule 95 (empty -> .) ]
  ! SINGLE_LINE_COMMENT [ reduce using rule 95 (empty -> .) ]
  ! MULTI_LINE_COMMENT [ reduce using rule 95 (empty -> .) ]

    pre_class_declaration_list     shift and go to state 7
    pre_class_declaration          shift and go to state 8
    comment_list                   shift and go to state 9
    import_statement               shift and go to state 10
    empty                          shift and go to state 11
    comment                        shift and go to state 12
    multi_line_comment             shift and go to state 15

state 4

    (1) package_statement_or_empty -> package_statement .

    IMPORT          reduce using rule 1 (package_statement_or_empty -> package_statement .)
    SINGLE_LINE_COMMENT reduce using rule 1 (package_statement_or_empty -> package_statement .)
    MULTI_LINE_COMMENT reduce using rule 1 (package_statement_or_empty -> package_statement .)
    PUBLIC          reduce using rule 1 (package_statement_or_empty -> package_statement .)
    PRIVATE         reduce using rule 1 (package_statement_or_empty -> package_statement .)
    VOID            reduce using rule 1 (package_statement_or_empty -> package_statement .)
    STATIC          reduce using rule 1 (package_statement_or_empty -> package_statement .)
    BYTE            reduce using rule 1 (package_statement_or_empty -> package_statement .)
    SHORT           reduce using rule 1 (package_statement_or_empty -> package_statement .)
    CHAR            reduce using rule 1 (package_statement_or_empty -> package_statement .)
    INT             reduce using rule 1 (package_statement_or_empty -> package_statement .)
    LONG            reduce using rule 1 (package_statement_or_empty -> package_statement .)
    FLOAT           reduce using rule 1 (package_statement_or_empty -> package_statement .)
    DOUBLE          reduce using rule 1 (package_statement_or_empty -> package_statement .)
    BOOLEAN         reduce using rule 1 (package_statement_or_empty -> package_statement .)
    ID              reduce using rule 1 (package_statement_or_empty -> package_statement .)


state 5

    (2) package_statement_or_empty -> empty .

    IMPORT          reduce using rule 2 (package_statement_or_empty -> empty .)
    SINGLE_LINE_COMMENT reduce using rule 2 (package_statement_or_empty -> empty .)
    MULTI_LINE_COMMENT reduce using rule 2 (package_statement_or_empty -> empty .)
    PUBLIC          reduce using rule 2 (package_statement_or_empty -> empty .)
    PRIVATE         reduce using rule 2 (package_statement_or_empty -> empty .)
    VOID            reduce using rule 2 (package_statement_or_empty -> empty .)
    STATIC          reduce using rule 2 (package_statement_or_empty -> empty .)
    BYTE            reduce using rule 2 (package_statement_or_empty -> empty .)
    SHORT           reduce using rule 2 (package_statement_or_empty -> empty .)
    CHAR            reduce using rule 2 (package_statement_or_empty -> empty .)
    INT             reduce using rule 2 (package_statement_or_empty -> empty .)
    LONG            reduce using rule 2 (package_statement_or_empty -> empty .)
    FLOAT           reduce using rule 2 (package_statement_or_empty -> empty .)
    DOUBLE          reduce using rule 2 (package_statement_or_empty -> empty .)
    BOOLEAN         reduce using rule 2 (package_statement_or_empty -> empty .)
    ID              reduce using rule 2 (package_statement_or_empty -> empty .)


state 6

    (12) package_statement -> PACKAGE . qualified_identifier ;
    (89) qualified_identifier -> . identifier
    (90) qualified_identifier -> . identifier . qualified_identifier
    (81) identifier -> . ID

    ID              shift and go to state 19

    qualified_identifier           shift and go to state 17
    identifier                     shift and go to state 18

state 7

    (42) class_declaration_with_comments -> package_statement_or_empty pre_class_declaration_list . class_declaration comment_list_or_empty
    (26) pre_class_declaration_list -> pre_class_declaration_list . pre_class_declaration
    (38) class_declaration -> . class_modifier_list CLASS identifier extends_or_empty { class_body }
    (39) pre_class_declaration -> . comment_list
    (40) pre_class_declaration -> . import_statement
    (41) pre_class_declaration -> . empty
    (45) class_modifier_list -> . class_modifier
    (46) class_modifier_list -> . class_modifier_list class_modifier
    (20) comment_list -> . comment
    (21) comment_list -> . comment comment_list
    (55) import_statement -> . IMPORT qualified_identifier ;
    (95) empty -> .
    (70) class_modifier -> . PUBLIC
    (71) class_modifier -> . PRIVATE
    (72) class_modifier -> . VOID
    (73) class_modifier -> . STATIC
    (74) class_modifier -> . variable_type
    (36) comment -> . SINGLE_LINE_COMMENT
    (37) comment -> . multi_line_comment
    (58) variable_type -> . identifier
    (59) variable_type -> . BYTE
    (60) variable_type -> . SHORT
    (61) variable_type -> . CHAR
    (62) variable_type -> . INT
    (63) variable_type -> . LONG
    (64) variable_type -> . FLOAT
    (65) variable_type -> . DOUBLE
    (66) variable_type -> . BOOLEAN
    (67) variable_type -> . array_type
    (44) multi_line_comment -> . MULTI_LINE_COMMENT
    (81) identifier -> . ID
    (83) array_type -> . variable_type [ ]

  ! shift/reduce conflict for IMPORT resolved as shift
  ! shift/reduce conflict for PUBLIC resolved as shift
  ! shift/reduce conflict for PRIVATE resolved as shift
  ! shift/reduce conflict for VOID resolved as shift
  ! shift/reduce conflict for STATIC resolved as shift
  ! shift/reduce conflict for SINGLE_LINE_COMMENT resolved as shift
  ! shift/reduce conflict for BYTE resolved as shift
  ! shift/reduce conflict for SHORT resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for LONG resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for DOUBLE resolved as shift
  ! shift/reduce conflict for BOOLEAN resolved as shift
  ! shift/reduce conflict for MULTI_LINE_COMMENT resolved as shift
  ! shift/reduce conflict for ID resolved as shift
    IMPORT          shift and go to state 13
    PUBLIC          shift and go to state 25
    PRIVATE         shift and go to state 26
    VOID            shift and go to state 27
    STATIC          shift and go to state 28
    SINGLE_LINE_COMMENT shift and go to state 14
    BYTE            shift and go to state 30
    SHORT           shift and go to state 31
    CHAR            shift and go to state 32
    INT             shift and go to state 33
    LONG            shift and go to state 34
    FLOAT           shift and go to state 35
    DOUBLE          shift and go to state 36
    BOOLEAN         shift and go to state 37
    MULTI_LINE_COMMENT shift and go to state 16
    ID              shift and go to state 19

  ! IMPORT          [ reduce using rule 95 (empty -> .) ]
  ! PUBLIC          [ reduce using rule 95 (empty -> .) ]
  ! PRIVATE         [ reduce using rule 95 (empty -> .) ]
  ! VOID            [ reduce using rule 95 (empty -> .) ]
  ! STATIC          [ reduce using rule 95 (empty -> .) ]
  ! SINGLE_LINE_COMMENT [ reduce using rule 95 (empty -> .) ]
  ! BYTE            [ reduce using rule 95 (empty -> .) ]
  ! SHORT           [ reduce using rule 95 (empty -> .) ]
  ! CHAR            [ reduce using rule 95 (empty -> .) ]
  ! INT             [ reduce using rule 95 (empty -> .) ]
  ! LONG            [ reduce using rule 95 (empty -> .) ]
  ! FLOAT           [ reduce using rule 95 (empty -> .) ]
  ! DOUBLE          [ reduce using rule 95 (empty -> .) ]
  ! BOOLEAN         [ reduce using rule 95 (empty -> .) ]
  ! MULTI_LINE_COMMENT [ reduce using rule 95 (empty -> .) ]
  ! ID              [ reduce using rule 95 (empty -> .) ]

    class_declaration              shift and go to state 20
    pre_class_declaration          shift and go to state 21
    class_modifier_list            shift and go to state 22
    identifier                     shift and go to state 23
    comment_list                   shift and go to state 9
    import_statement               shift and go to state 10
    empty                          shift and go to state 11
    class_modifier                 shift and go to state 24
    comment                        shift and go to state 12
    variable_type                  shift and go to state 29
    multi_line_comment             shift and go to state 15
    array_type                     shift and go to state 38

state 8

    (25) pre_class_declaration_list -> pre_class_declaration .

    IMPORT          reduce using rule 25 (pre_class_declaration_list -> pre_class_declaration .)
    PUBLIC          reduce using rule 25 (pre_class_declaration_list -> pre_class_declaration .)
    PRIVATE         reduce using rule 25 (pre_class_declaration_list -> pre_class_declaration .)
    VOID            reduce using rule 25 (pre_class_declaration_list -> pre_class_declaration .)
    STATIC          reduce using rule 25 (pre_class_declaration_list -> pre_class_declaration .)
    SINGLE_LINE_COMMENT reduce using rule 25 (pre_class_declaration_list -> pre_class_declaration .)
    BYTE            reduce using rule 25 (pre_class_declaration_list -> pre_class_declaration .)
    SHORT           reduce using rule 25 (pre_class_declaration_list -> pre_class_declaration .)
    CHAR            reduce using rule 25 (pre_class_declaration_list -> pre_class_declaration .)
    INT             reduce using rule 25 (pre_class_declaration_list -> pre_class_declaration .)
    LONG            reduce using rule 25 (pre_class_declaration_list -> pre_class_declaration .)
    FLOAT           reduce using rule 25 (pre_class_declaration_list -> pre_class_declaration .)
    DOUBLE          reduce using rule 25 (pre_class_declaration_list -> pre_class_declaration .)
    BOOLEAN         reduce using rule 25 (pre_class_declaration_list -> pre_class_declaration .)
    MULTI_LINE_COMMENT reduce using rule 25 (pre_class_declaration_list -> pre_class_declaration .)
    ID              reduce using rule 25 (pre_class_declaration_list -> pre_class_declaration .)


state 9

    (39) pre_class_declaration -> comment_list .

    IMPORT          reduce using rule 39 (pre_class_declaration -> comment_list .)
    PUBLIC          reduce using rule 39 (pre_class_declaration -> comment_list .)
    PRIVATE         reduce using rule 39 (pre_class_declaration -> comment_list .)
    VOID            reduce using rule 39 (pre_class_declaration -> comment_list .)
    STATIC          reduce using rule 39 (pre_class_declaration -> comment_list .)
    SINGLE_LINE_COMMENT reduce using rule 39 (pre_class_declaration -> comment_list .)
    BYTE            reduce using rule 39 (pre_class_declaration -> comment_list .)
    SHORT           reduce using rule 39 (pre_class_declaration -> comment_list .)
    CHAR            reduce using rule 39 (pre_class_declaration -> comment_list .)
    INT             reduce using rule 39 (pre_class_declaration -> comment_list .)
    LONG            reduce using rule 39 (pre_class_declaration -> comment_list .)
    FLOAT           reduce using rule 39 (pre_class_declaration -> comment_list .)
    DOUBLE          reduce using rule 39 (pre_class_declaration -> comment_list .)
    BOOLEAN         reduce using rule 39 (pre_class_declaration -> comment_list .)
    MULTI_LINE_COMMENT reduce using rule 39 (pre_class_declaration -> comment_list .)
    ID              reduce using rule 39 (pre_class_declaration -> comment_list .)


state 10

    (40) pre_class_declaration -> import_statement .

    IMPORT          reduce using rule 40 (pre_class_declaration -> import_statement .)
    PUBLIC          reduce using rule 40 (pre_class_declaration -> import_statement .)
    PRIVATE         reduce using rule 40 (pre_class_declaration -> import_statement .)
    VOID            reduce using rule 40 (pre_class_declaration -> import_statement .)
    STATIC          reduce using rule 40 (pre_class_declaration -> import_statement .)
    SINGLE_LINE_COMMENT reduce using rule 40 (pre_class_declaration -> import_statement .)
    BYTE            reduce using rule 40 (pre_class_declaration -> import_statement .)
    SHORT           reduce using rule 40 (pre_class_declaration -> import_statement .)
    CHAR            reduce using rule 40 (pre_class_declaration -> import_statement .)
    INT             reduce using rule 40 (pre_class_declaration -> import_statement .)
    LONG            reduce using rule 40 (pre_class_declaration -> import_statement .)
    FLOAT           reduce using rule 40 (pre_class_declaration -> import_statement .)
    DOUBLE          reduce using rule 40 (pre_class_declaration -> import_statement .)
    BOOLEAN         reduce using rule 40 (pre_class_declaration -> import_statement .)
    MULTI_LINE_COMMENT reduce using rule 40 (pre_class_declaration -> import_statement .)
    ID              reduce using rule 40 (pre_class_declaration -> import_statement .)


state 11

    (41) pre_class_declaration -> empty .

    IMPORT          reduce using rule 41 (pre_class_declaration -> empty .)
    PUBLIC          reduce using rule 41 (pre_class_declaration -> empty .)
    PRIVATE         reduce using rule 41 (pre_class_declaration -> empty .)
    VOID            reduce using rule 41 (pre_class_declaration -> empty .)
    STATIC          reduce using rule 41 (pre_class_declaration -> empty .)
    SINGLE_LINE_COMMENT reduce using rule 41 (pre_class_declaration -> empty .)
    BYTE            reduce using rule 41 (pre_class_declaration -> empty .)
    SHORT           reduce using rule 41 (pre_class_declaration -> empty .)
    CHAR            reduce using rule 41 (pre_class_declaration -> empty .)
    INT             reduce using rule 41 (pre_class_declaration -> empty .)
    LONG            reduce using rule 41 (pre_class_declaration -> empty .)
    FLOAT           reduce using rule 41 (pre_class_declaration -> empty .)
    DOUBLE          reduce using rule 41 (pre_class_declaration -> empty .)
    BOOLEAN         reduce using rule 41 (pre_class_declaration -> empty .)
    MULTI_LINE_COMMENT reduce using rule 41 (pre_class_declaration -> empty .)
    ID              reduce using rule 41 (pre_class_declaration -> empty .)


state 12

    (20) comment_list -> comment .
    (21) comment_list -> comment . comment_list
    (20) comment_list -> . comment
    (21) comment_list -> . comment comment_list
    (36) comment -> . SINGLE_LINE_COMMENT
    (37) comment -> . multi_line_comment
    (44) multi_line_comment -> . MULTI_LINE_COMMENT

  ! shift/reduce conflict for SINGLE_LINE_COMMENT resolved as shift
  ! shift/reduce conflict for MULTI_LINE_COMMENT resolved as shift
    IMPORT          reduce using rule 20 (comment_list -> comment .)
    PUBLIC          reduce using rule 20 (comment_list -> comment .)
    PRIVATE         reduce using rule 20 (comment_list -> comment .)
    VOID            reduce using rule 20 (comment_list -> comment .)
    STATIC          reduce using rule 20 (comment_list -> comment .)
    BYTE            reduce using rule 20 (comment_list -> comment .)
    SHORT           reduce using rule 20 (comment_list -> comment .)
    CHAR            reduce using rule 20 (comment_list -> comment .)
    INT             reduce using rule 20 (comment_list -> comment .)
    LONG            reduce using rule 20 (comment_list -> comment .)
    FLOAT           reduce using rule 20 (comment_list -> comment .)
    DOUBLE          reduce using rule 20 (comment_list -> comment .)
    BOOLEAN         reduce using rule 20 (comment_list -> comment .)
    ID              reduce using rule 20 (comment_list -> comment .)
    $end            reduce using rule 20 (comment_list -> comment .)
    SINGLE_LINE_COMMENT shift and go to state 14
    MULTI_LINE_COMMENT shift and go to state 16

  ! SINGLE_LINE_COMMENT [ reduce using rule 20 (comment_list -> comment .) ]
  ! MULTI_LINE_COMMENT [ reduce using rule 20 (comment_list -> comment .) ]

    comment                        shift and go to state 12
    comment_list                   shift and go to state 39
    multi_line_comment             shift and go to state 15

state 13

    (55) import_statement -> IMPORT . qualified_identifier ;
    (89) qualified_identifier -> . identifier
    (90) qualified_identifier -> . identifier . qualified_identifier
    (81) identifier -> . ID

    ID              shift and go to state 19

    qualified_identifier           shift and go to state 40
    identifier                     shift and go to state 18

state 14

    (36) comment -> SINGLE_LINE_COMMENT .

    SINGLE_LINE_COMMENT reduce using rule 36 (comment -> SINGLE_LINE_COMMENT .)
    MULTI_LINE_COMMENT reduce using rule 36 (comment -> SINGLE_LINE_COMMENT .)
    IMPORT          reduce using rule 36 (comment -> SINGLE_LINE_COMMENT .)
    PUBLIC          reduce using rule 36 (comment -> SINGLE_LINE_COMMENT .)
    PRIVATE         reduce using rule 36 (comment -> SINGLE_LINE_COMMENT .)
    VOID            reduce using rule 36 (comment -> SINGLE_LINE_COMMENT .)
    STATIC          reduce using rule 36 (comment -> SINGLE_LINE_COMMENT .)
    BYTE            reduce using rule 36 (comment -> SINGLE_LINE_COMMENT .)
    SHORT           reduce using rule 36 (comment -> SINGLE_LINE_COMMENT .)
    CHAR            reduce using rule 36 (comment -> SINGLE_LINE_COMMENT .)
    INT             reduce using rule 36 (comment -> SINGLE_LINE_COMMENT .)
    LONG            reduce using rule 36 (comment -> SINGLE_LINE_COMMENT .)
    FLOAT           reduce using rule 36 (comment -> SINGLE_LINE_COMMENT .)
    DOUBLE          reduce using rule 36 (comment -> SINGLE_LINE_COMMENT .)
    BOOLEAN         reduce using rule 36 (comment -> SINGLE_LINE_COMMENT .)
    ID              reduce using rule 36 (comment -> SINGLE_LINE_COMMENT .)
    $end            reduce using rule 36 (comment -> SINGLE_LINE_COMMENT .)
    }               reduce using rule 36 (comment -> SINGLE_LINE_COMMENT .)
    IF              reduce using rule 36 (comment -> SINGLE_LINE_COMMENT .)
    WHILE           reduce using rule 36 (comment -> SINGLE_LINE_COMMENT .)
    RETURN          reduce using rule 36 (comment -> SINGLE_LINE_COMMENT .)
    (               reduce using rule 36 (comment -> SINGLE_LINE_COMMENT .)
    DEC_LIT         reduce using rule 36 (comment -> SINGLE_LINE_COMMENT .)
    FLOAT_LIT       reduce using rule 36 (comment -> SINGLE_LINE_COMMENT .)
    STR_LIT         reduce using rule 36 (comment -> SINGLE_LINE_COMMENT .)
    CHAR_LIT        reduce using rule 36 (comment -> SINGLE_LINE_COMMENT .)
    -               reduce using rule 36 (comment -> SINGLE_LINE_COMMENT .)
    NEW             reduce using rule 36 (comment -> SINGLE_LINE_COMMENT .)


state 15

    (37) comment -> multi_line_comment .

    SINGLE_LINE_COMMENT reduce using rule 37 (comment -> multi_line_comment .)
    MULTI_LINE_COMMENT reduce using rule 37 (comment -> multi_line_comment .)
    IMPORT          reduce using rule 37 (comment -> multi_line_comment .)
    PUBLIC          reduce using rule 37 (comment -> multi_line_comment .)
    PRIVATE         reduce using rule 37 (comment -> multi_line_comment .)
    VOID            reduce using rule 37 (comment -> multi_line_comment .)
    STATIC          reduce using rule 37 (comment -> multi_line_comment .)
    BYTE            reduce using rule 37 (comment -> multi_line_comment .)
    SHORT           reduce using rule 37 (comment -> multi_line_comment .)
    CHAR            reduce using rule 37 (comment -> multi_line_comment .)
    INT             reduce using rule 37 (comment -> multi_line_comment .)
    LONG            reduce using rule 37 (comment -> multi_line_comment .)
    FLOAT           reduce using rule 37 (comment -> multi_line_comment .)
    DOUBLE          reduce using rule 37 (comment -> multi_line_comment .)
    BOOLEAN         reduce using rule 37 (comment -> multi_line_comment .)
    ID              reduce using rule 37 (comment -> multi_line_comment .)
    $end            reduce using rule 37 (comment -> multi_line_comment .)
    }               reduce using rule 37 (comment -> multi_line_comment .)
    IF              reduce using rule 37 (comment -> multi_line_comment .)
    WHILE           reduce using rule 37 (comment -> multi_line_comment .)
    RETURN          reduce using rule 37 (comment -> multi_line_comment .)
    (               reduce using rule 37 (comment -> multi_line_comment .)
    DEC_LIT         reduce using rule 37 (comment -> multi_line_comment .)
    FLOAT_LIT       reduce using rule 37 (comment -> multi_line_comment .)
    STR_LIT         reduce using rule 37 (comment -> multi_line_comment .)
    CHAR_LIT        reduce using rule 37 (comment -> multi_line_comment .)
    -               reduce using rule 37 (comment -> multi_line_comment .)
    NEW             reduce using rule 37 (comment -> multi_line_comment .)


state 16

    (44) multi_line_comment -> MULTI_LINE_COMMENT .

    SINGLE_LINE_COMMENT reduce using rule 44 (multi_line_comment -> MULTI_LINE_COMMENT .)
    MULTI_LINE_COMMENT reduce using rule 44 (multi_line_comment -> MULTI_LINE_COMMENT .)
    IMPORT          reduce using rule 44 (multi_line_comment -> MULTI_LINE_COMMENT .)
    PUBLIC          reduce using rule 44 (multi_line_comment -> MULTI_LINE_COMMENT .)
    PRIVATE         reduce using rule 44 (multi_line_comment -> MULTI_LINE_COMMENT .)
    VOID            reduce using rule 44 (multi_line_comment -> MULTI_LINE_COMMENT .)
    STATIC          reduce using rule 44 (multi_line_comment -> MULTI_LINE_COMMENT .)
    BYTE            reduce using rule 44 (multi_line_comment -> MULTI_LINE_COMMENT .)
    SHORT           reduce using rule 44 (multi_line_comment -> MULTI_LINE_COMMENT .)
    CHAR            reduce using rule 44 (multi_line_comment -> MULTI_LINE_COMMENT .)
    INT             reduce using rule 44 (multi_line_comment -> MULTI_LINE_COMMENT .)
    LONG            reduce using rule 44 (multi_line_comment -> MULTI_LINE_COMMENT .)
    FLOAT           reduce using rule 44 (multi_line_comment -> MULTI_LINE_COMMENT .)
